--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "@celo/contractkit": "^0.4.0",
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "axios": "^0.19.2",
     "ethereumjs-tx": "^1.3.7",
     "grunt": "1.0.4",
     "js-sha256": "^0.9.0",
